main.tf
resource "aws_instance" "terraformdemo" {
  ami               = var.aws_ami //"ami-04ad2567c9e3d7893"
  availability_zone = var.az      //"us-east-1a"
  subnet_id         = var.sub-net //"subnet-008b0a0d1c302b578"
  key_name          = "terraform-key"
  instance_type     = var.IN // "t2.small"
  count             = 1
}
